# Study

./: .gitignore  README.md  Study.code-workspace
Baekjoon/: ex10869.c  ex10869.ilk  ex_1008.ilk  ex_10926.ilk
C/: README.md  기초공부
C/Baekjoon/: ex_1008.c  ex_10926.c
C/Basic/: 0205_ex_4.c  0205_ex_4_1.c  0206_ex_9.c  0209_ex_11.c  0211_ex_16.c  0211_ex_17.c  0212_ex_19.c  c10_3.c  ex10_1_1.c  ex10_4.c  ex10_6.c  ex10_7.c  ex2_5.c  ex3_1.c  ex3_11.c  ex3_3.c  ex3_5.c  ex3_6.c  ex4_12.c  ex6_2.c  ex6_3.c  ex6_4.c  ex8_2_2.c  ex9_1.c  ex9_3.c  ex9_5_2.c  ex9_7.c  ex9_8.c  (+9 more)
CPP/: README.md  ex01.cpp  ex02.cpp  ex03.cpp  ex06.cpp  ex08.cpp
CPP/Project_Kiosk/: CMakeLists.txt  CartUtil.h  ConsoleUtil.cpp  ConsoleUtil.h  DataManager.cpp  DataManager.h  Display.cpp  Display_Manager.cpp  Display_Manager.h  Display_selling.cpp  Display_selling.h  Login.cpp  Login.h  Payment.cpp  Payment.h  ProjectManager.cpp  Shpping.cpp  Shpping.h
CPP/Project_Kiosk/Resource/: LoginError.json  PaymentReceipt.json  access_control.json  manager.json  menu.json
OpenCV/: Web.txt  ex04.py  portfolio.py
PLC/: README.md
PYC_Logic/: .gitignore  README.md  ex04.ipynb
Python/: README.md  add_toc_links.py  basic.txt
scripts/: all_filter.py  client_move_config.json  hmi_preview_v03.py  hmi_preview_v03_cam.py  json_client_move_tb1.py  json_server.py  opencv_balck_robot_auto_tune_v01.py  opencv_filter_selector_v01.py  opencv_filter_selector_v01_config.json  opencv_filter_selector_v02.py  opencv_safety_calibration_v01.py  opencv_safety_config.json  server_hmi_v03_config.json  test_v4l_filter_4.py
(+3012 files in other folders)
